--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="%PUBLIC_URL%/css/magnific-popup.css">
 
 
-  <title>PAPA Resume Starter Pack</title>
+  <title>Sahil Garat Digital Resume</title>
 </head>
 
 <body>
